# Spotify-Downloader

./: .gitignore  CMakeLists.txt  README.md  Spotify Downloader.sln
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  feature_request.md  feature_request.yaml  question.md  question.yaml
Installer/: Installer Command.txt  installscript.qs  startmenu.pro
Installer/config/: config.xml
Spotify Downloader/: Animation.cpp  Animation.h  Application.cpp  Application.h  Config.cpp  Config.h  CustomWidgets.cpp  CustomWidgets.h  ImageUtils.cpp  ImageUtils.h  JSONUtils.cpp  JSONUtils.h  Logger.cpp  Logger.h  Lyrics.cpp  Lyrics.h  MathUtils.cpp  MathUtils.h  Network.cpp  Network.h  ObjectHoverWatcher.cpp  PlaylistDownloader.cpp  QButtonHoverWatcher.cpp  QButtonHoverWatcher.h  Song.cpp  Song.h  SongDownloader.cpp  Spotify Downloader.vcxproj  Spotify Downloader.vcxproj.filters  SpotifyAPI.cpp  SpotifyAPI.h  SpotifyDownloader.cpp  SpotifyDownloader.h  SpotifyDownloader.qrc  SpotifyDownloader.rc  SpotifyDownloader.ui  StringUtils.cpp  StringUtils.h  UISetup.cpp  UIUtilities.cpp  (+4 more)
Spotify Downloader/Downloading/: Codec.h  PlaylistDownloader.cpp  Song.cpp  Song.h  SongDownloader.cpp  SpotifyDownloader.cpp  SpotifyDownloader.h
Spotify Downloader/Lyrics/: LRCFile.cpp  LRCFile.h  Lyrics.h
Spotify Downloader/Network/: MusixmatchAPI.cpp  MusixmatchAPI.h  Network.cpp  Network.h  Notices.cpp  Notices.h  SpotifyAPI.cpp  SpotifyAPI.h  SpotifyAPINEW.cpp  SpotifyAPINEW.h  SpotifyAuth.h  SpotifyAuthInterceptor.cpp  SpotifyAuthInterceptor.h  SpotifyAuthRetriever.cpp  SpotifyAuthRetriever.h  VersionManager.cpp  VersionManager.h  YTMusicAPI.cpp  YTMusicAPI.h
Spotify Downloader/Playlist/: M3UFile.cpp  M3UFile.h  PLSFile.cpp  PLSFile.h  PlaylistFile.cpp  PlaylistFile.h  PlaylistFileTrack.h  XSPFFile.cpp  XSPFFile.h
Spotify Downloader/UI/: UISetup.cpp  UIUtilities.cpp
Spotify Downloader/Utilities/: Animation.cpp  Animation.h  FileUtils.cpp  FileUtils.h  ImageUtils.cpp  ImageUtils.h  JSONUtils.cpp  JSONUtils.h  Logger.cpp  ObjectHoverWatcher.cpp  ObjectHoverWatcher.h  StringUtils.cpp  StringUtils.h
Spotify Downloader/lib/: tagd.lib  taglib.lib
cmake/: GetCppcodec.cmake  GetCurl.cmake  GetFFmpeg.cmake  GetJson.cmake  GetLexbor.cmake  GetLinuxDeployQt.cmake  GetQuickJs.cmake  GetStb.cmake  GetTagLib.cmake  GetYtdlp.cmake  template.desktop
enc_temp_folder/851a7fdb81ce42df703191515fbe605/: PlaylistDownloader.cpp
gui/: CMakeLists.txt  gui.qrc  main.qml
include/: CMakeLists.txt  MainScreenGUIManager.h
include/Downloading/: CMakeLists.txt  DownloadManager.h
include/Gui/: CMakeLists.txt
include/audio_data/: Album.h  AlbumData.h  AlbumTracks.h  Artist.h  ArtistData.h  CMakeLists.txt  EAlbumType.h  ECodec.h  PlaylistData.h  PlaylistTracks.h  Track.h  TrackData.h
include/audio_data/codecs/: BitrateDetails.h  CMakeLists.txt  CodecAAC.h  CodecFLAC.h  CodecFactory.h  CodecM4A.h  CodecMP3.h  CodecOGG.h  CodecWAV.h  CodecWEBM.h  EExtension.h  EMetadataType.h  ICodec.h
include/cli/: ArgumentParser.h  CMakeLists.txt
include/config/: CMakeLists.txt  Config.h
include/dependencies/: CMakeLists.txt  EYtdlpError  ExternalProcess.h  Ffmpeg.h  Process.h  Ytdlp.h  YtdlpError.h  YtdlpResult.h
include/downloading/: CMakeLists.txt  DownloadManager.h  DownloadResult.h  TrackDownloader.h
include/gui/: MainScreenGUIManager.h
include/html/: CMakeLists.txt  HtmlNode.h  HtmlParser.h
resources/: CMakeLists.txt  resources.qrc
src/: CMakeLists.txt  MainScreenGUIManager.cpp  main.cpp
(+118 files in other folders)
